--- a/src/renderer/src/pages/Profile/Profile.css
+++ b/src/renderer/src/pages/Profile/Profile.css
@@ -24,12 +24,18 @@
   border: none;
 }
 .ant-collapse-header{
+  border: none !important;
   border-radius: 16px !important; 
 }
 .panel-item{
+  border: none !important;
   border-radius: 16px !important;
   background-color: rgba(243, 244, 246) !important;
   padding:0;
+  transition: all 0.3s ease;
+}
+.panel-item:hover{
+  transform: scale(1.05);
 }
 .panel-icon{
   color:rgba(245, 158, 11);
@@ -41,7 +47,4 @@
   align-items: center;
   justify-content: center;
   margin: 0 1rem 0 0;
-}
-.panel-text{
-
 }
